<resources>
    <string name="app_name">AndroidNavigationDrawer</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_friend">Friend</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_event">Event</string>
    <string name="menu_setting">Setting</string>

    <string name="greeting">Hi, How Are You?</string>
</resources>
