<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_friend"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_friend" />
        <item
            android:id="@+id/menu_gallery"
            android:icon="@drawable/ic_insert_photo_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/menu_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_setting" />
    </group>
</menu>
